# gameta

./: .flake8  .gitignore  .mypy.ini  404.html  LICENSE  README.md  index.html  pyproject.toml  search.html  sitemap.xml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  versioning-checklist.md
about/contributing/: index.html
about/license/: index.html
about/release_notes/: index.html
archive/gameta/: apply.py  cli.py  cmd.py  constants.py  execute.py  init.py  params.py  repos.py  schemas.py  sync.py  tags.py  venv.py
archive/gameta/base/: __init__.py  context.py  errors.py  files.py  imports.py
archive/gameta/base/schemas/: __init__.py  schema.py  version025.py  version030.py
archive/gameta/base/vcs/: __init__.py  git.py  vcs.py
archive/tests/: test_apply.py  test_cli.py  test_cmd.py  test_constants.py  test_execute.py  test_init.py  test_params.py  test_repos.py  test_schemas.py  test_sync.py  test_tags.py  test_venv.py
archive/tests/base/: test_context.py
archive/tests/base/schemas/: test_schema.py
archive/tests/base/vcs/: test_git.py  test_vcs.py
archive/tests/data/: .gameta_full  .gameta_v025
commands/0.1/commands/: index.html
commands/0.2/commands/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/about/: contributing.md  license.md  release_notes.md
docs/docs/commands/0.1/: commands.md
docs/docs/commands/0.2/: commands.md
docs/docs/commands/0.3/: commands.md
docs/docs/metarepos/: metarepos.md
docs/docs/user_guide/: applying_commands.md  best_practices.md  commands.md
docs/docs/user_guide/applications/: best_practices.md  use_cases.md
docs/docs/user_guide/commands/: applying_commands.md  commands_vs_scripts.md  executing_scripts.md
docs/docs/user_guide/customisation/: adding_scripting_languages.md
docs/docs/user_guide/repositories/: managing_repositories.md
gameta/: __init__.py  apply.py  cli.py  cmd.py  constants.py  context.py  exec.py  execute.py  init.py  parameters.py  params.py  repos.py  schemas.py  sync.py  tags.py  venv.py
gameta/base/: __init__.py  command.py  commands.py  context.py  contexts.py  env.py  errors.py  files.py  imports.py  parameter.py  parameters.py
gameta/base/schemas/: __init__.py  schema.py  version025.py  version030.py
gameta/base/vcs/: __init__.py  git.py  vcs.py
gameta/schemas/: __init__.py
metarepos/: index.html
metarepos/metarepos/: index.html
search/: search_index.json
tests/: __init__.py  test_apply.py  test_cli.py  test_cmd.py  test_constants.py  test_context.py  test_exec.py  test_execute.py  test_gameta.py  test_init.py  test_parameters.py  test_params.py  test_repos.py  test_schemas.py  test_sync.py  test_tags.py  test_venv.py
tests/base/: test_command.py  test_commands.py  test_context.py  test_contexts.py  test_parameters.py
tests/base/schemas/: test_schema.py  test_version030.py
tests/base/vcs/: test_git.py  test_vcs.py
tests/cli_plugin/: setup.py
tests/cli_plugin/cli_plugin/: __init__.py
tests/data/: .meta_other_repos
tests/data/gameta_commands_only/.gameta/: .gameta
tests/data/gameta_full/.gameta/: .gameta
tests/data/gameta_multi_repos_only/.gameta/: .gameta
tests/data/gameta_single_repo_only/.gameta/: .gameta
tests/test_cli_plugin/: setup.py
user_guide/applying_commands/: index.html
user_guide/best_practices/: index.html
user_guide/commands/: index.html
