[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "gameta"
version = "0.3.0a1"
description = "CLI Tool for managing meta-repositories"
license = "MIT"
authors = [ "David Lee <ltw_david@hotmail.com>",]
exclude = [ "tests", ]
packages = [
    {include = "gameta"},
]

readme = "README.md"
repository = "https://github.com/genius-systems/gameta"
homepage = "https://genius-systems.github.io/gameta"
documentation = "https://genius-systems.github.io/gameta"

keywords = ["metarepositories", "repositories", "shell", "git"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Terminals"
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36,py37,py38,py39

[testenv]
deps = -etests/cli_plugin
commands = python -m unittest discover -v -s ./tests -t .

[testenv:py36]
setenv =
    LC_ALL = C.UTF-8
    LANG = C.UTF-8
"""

[tool.poetry.dependencies]
python = ">=3.6"
Click = "^7.1.2"
colorama = "^0.4.3"
gitpython = "^3.1.9"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
tox = "^3.16.1"
tox-pyenv = "^1.1.0"

[tool.poetry.scripts]
gameta = "gameta.cli:gameta_cli"

[tool.poetry.plugins."gameta.cli"]
apply = "gameta.apply:apply"
cmd = "gameta.cmd:cmd_cli"
const = "gameta.constants:constants_cli"
exec = "gameta.execute:execute"
init = "gameta.init:init"
params = "gameta.params:params_cli"
repo = "gameta.repos:repo_cli"
schema = "gameta.schemas:schema_cli"
sync = "gameta.sync:sync"
tags = "gameta.tags:tags_cli"
venv = "gameta.venv:venv_cli"
