[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "gameta"
version = "0.3.0a1"
description = "CLI Tool for managing workspaces"
license = "MIT"
authors = [ "David Lee <ltw_david@hotmail.com>", ]
exclude = [ "tests", ]
packages = [
    { include = "gameta" },
]

readme = "README.md"
repository = "https://github.com/genius-systems/gameta"
homepage = "https://genius-systems.github.io/gameta"
documentation = "https://genius-systems.github.io/gameta"

keywords = ["metarepositories", "repositories", "shell", "git"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Terminals"
]

[tool.poetry.dependencies]
python = ">=3.6"
Click = "^7.1.2"
colorama = "^0.4.3"
regex = "^2021.3.17"
gitpython = "^3.1.9"
jsonschema = "^3.2.0"
dataclasses = { version = "^0.8", python = "~3.6" }

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
tox = "^3.16.1"
tox-pyenv = "^1.1.0"
flake8 = "^3.9.0"
black = "^20.8"
isort = "^5.8.0"
mypy = "^"

[tool.poetry.scripts]
gameta = "gameta.cli:gameta_cli"

[tool.poetry.plugins."gameta.cli"]
#apply = "gameta.apply:apply"
#cmd = "gameta.cmd:command_cli"
#const = "gameta.constants:constants_cli"
#exec = "gameta.execute:execute"
#init = "gameta.init:init"
#params = "gameta.params:params_cli"
#repo = "gameta.repos:repo_cli"
schema = "gameta.schemas:schema_cli"
#sync = "gameta.sync:sync"
#tags = "gameta.tags:tags_cli"
#venv = "gameta.venv:venv_cli"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36,py37,py38,py39

[testenv]
download = true
deps = -etests/cli_plugin
commands = python -m unittest discover -v -s ./tests -t .

[testenv:py36]
setenv =
    LC_ALL = C.UTF-8
    LANG = C.UTF-8

[testenv:lint]
deps =
    flake8
    black
    isort
    mypy
commands =
    flake8
    isort .
    mypy gameta tests
    black gameta tests
"""

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.tox
    | \.venv
    | \.circleci
    | \.github
    | build
    | dist
    | archive
  )/
'''

[tool.isort]
profile = "black"
multi_line_output = 3